--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: pt-br
+lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone:
@@ -27,10 +27,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://Andra-sun.github.io"
 
 github:
-  username: Andra-sun # change to your GitHub username
+  username: Andra-sun 
 
 instagram:
-  username: c.a.m.i_le # change to your Twitter username
+  username: c.a.m.i_le 
 
 social:
   # Change to your full name.
@@ -40,7 +40,8 @@ social:
   links:
     # The first element serves as the copyright owner's link
      # change to your Twitter homepage
-    - https://github.com/Andra-sun # change to your GitHub homepage
+    - https://github.com/Andra-sun
+    - https://instagram.com/c.a.m.i_le 
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
