--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,8 @@ avatar: https://cdn-icons-png.freepik.com/512/3127/3127600.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://cdn-icons-png.freepik.com/512/3127/3127600.png
+
 
 # boolean type, the global switch for TOC in posts.
 toc: true
