--- a/_config.yml
+++ b/_config.yml
@@ -9,28 +9,26 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: America/Bahia
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Shark # the main title
+title: Shark
 
-tagline: Blog de estudos. # it will display as the subtitle
+tagline: Blog de estudos.
 
-description: >- # used by seo meta and the atom feed
+description:
   Este blog tem como objetivo postar assuntos no qual eu estou estudando ou que
   eu ja estudei no mundo da tecnologia.
 
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
+
 url: "https://Andra-sun.github.io"
+favicon: assets/img/android-chrome-192x192.png
 
 github:
   username: Andra-sun 
 
-instagram:
-  username: c.a.m.i_le 
 
 social:
   # Change to your full name.
@@ -41,7 +39,6 @@ social:
     # The first element serves as the copyright owner's link
      # change to your Twitter homepage
     - https://github.com/Andra-sun
-    - https://instagram.com/c.a.m.i_le 
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
