--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: pt-br
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone: America/Bahia
@@ -29,6 +29,11 @@ favicon: assets/img/android-chrome-192x192.png
 github:
   username: Andra-sun 
 
+twitter:
+  username: c.a.m.i_le
+
+instagram:
+  username: c.a.m.i_le
 
 social:
   # Change to your full name.
@@ -39,6 +44,7 @@ social:
     # The first element serves as the copyright owner's link
      # change to your Twitter homepage
     - https://github.com/Andra-sun
+    - https://intagram.com/c.a.m.i_le
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
