--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Andra
-  email: camileguimaraes463@gmail.com # change to your email address
+  email: camilea_guimaraes@outlook.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # change to your Twitter homepage
