--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: GTM-M5RMFVZQ
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
@@ -63,7 +63,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: 10421859167
+    id: G-JFMC332C4Y
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
